--- a/02 Flexbox/Flexbox.html
+++ b/02 Flexbox/Flexbox.html
@@ -8,7 +8,34 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>CSS Lessons</title>
-    <link rel="stylesheet" href=""
+    <link rel="stylesheet" href="Flexbox.css"
   </head>
-  <body></body>
+  <body>
+    <aside>
+      <div>
+        <img
+      width="75"
+      height="52"
+      src = "logo.jpeg" 
+      alt = "image"/>
+      </div>
+    <div>
+      <ul>
+        <li><a href="#">link1</a></li>
+        <li><a href="#">link2</a></li>
+        <li><a href="#">link3</a></li>
+        <li><a href="#">link4</a></li>
+      </ul>
+      
+    </div>
+    <div class="avatar">
+      <img
+      width="75"
+      height="52"
+      src = "avatar.jpeg" 
+      alt = "image"/>
+      <h6>usurname</h6>
+    </div>
+    </aside>
+  </body>
 </html>
